highlighted wireframe in sculpt mode #67305

Closed
opened 2019-07-20 11:10:55 +02:00 by Daniele Viagi · 10 comments

System Information
Operating system: Windows 10
Graphics card: nvidia 1060 Ti

Blender Version
2.8 RC2
Short description of error
If you are in sculpt mode with the wireframe overlay active and create a shape key or add a modifier, the mesh becomes highlighted which is not convenient in sculpt mode.

Exact steps for others to reproduce the error

  • Add UV Sphere
  • Sculpt mode
  • Activate wireframe overlay
  • Add a shapekey or a modifier like Subdivision Surface
**System Information** Operating system: Windows 10 Graphics card: nvidia 1060 Ti **Blender Version** 2.8 RC2 **Short description of error** If you are in sculpt mode with the wireframe overlay active and create a shape key or add a modifier, the mesh becomes highlighted which is not convenient in sculpt mode. **Exact steps for others to reproduce the error** - Add UV Sphere - Sculpt mode - Activate wireframe overlay - Add a shapekey or a modifier like Subdivision Surface
Author

Added subscriber: @DanieleViagi

Added subscriber: @DanieleViagi

Added subscriber: @zeauro

Added subscriber: @zeauro

I confirm. Same thing happens on ubuntu 18.04 nvidia titan black.

I confirm. Same thing happens on ubuntu 18.04 nvidia titan black.

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Clément Foucault was assigned by Germano Cavalcante 2019-07-22 19:16:10 +02:00

Basically the BKE_sculptsession_use_pbvh_draw(ob, draw_ctx->v3d) returns false in these cases.

Basically the `BKE_sculptsession_use_pbvh_draw(ob, draw_ctx->v3d)` returns `false` in these cases.

Added subscriber: @matc

Added subscriber: @matc

If DRW_object_use_pbvh_drawing returns true, then the modifier isn't visible. This should do the trick for this case.

diff --git a/source/blender/draw/modes/overlay_mode.c b/source/blender/draw/modes/overlay_mode.c
index a5b1133abf4..b9048b4bed4 100644
--- a/source/blender/draw/modes/overlay_mode.c
+++ b/source/blender/draw/modes/overlay_mode.c
@@ -405,7 +405,7 @@ static void overlay_cache_populate(void *vedata, Object *ob)
       const bool is_wire = (ob->dt < OB_SOLID);
       const bool is_xray = (ob->dtx & OB_DRAWXRAY);
       const bool use_coloring = (pd->show_overlays && !is_edit_mode && !use_sculpt_pbvh &&
-                                 !has_edit_mesh_cage);
+                                 !has_edit_mesh_cage && ob->mode != OB_MODE_SCULPT);
       DRWShadingGroup *shgrp = NULL;

       struct GPUBatch *geom;


If DRW_object_use_pbvh_drawing returns true, then the modifier isn't visible. This should do the trick for this case. ``` diff --git a/source/blender/draw/modes/overlay_mode.c b/source/blender/draw/modes/overlay_mode.c index a5b1133abf4..b9048b4bed4 100644 --- a/source/blender/draw/modes/overlay_mode.c +++ b/source/blender/draw/modes/overlay_mode.c @@ -405,7 +405,7 @@ static void overlay_cache_populate(void *vedata, Object *ob) const bool is_wire = (ob->dt < OB_SOLID); const bool is_xray = (ob->dtx & OB_DRAWXRAY); const bool use_coloring = (pd->show_overlays && !is_edit_mode && !use_sculpt_pbvh && - !has_edit_mesh_cage); + !has_edit_mesh_cage && ob->mode != OB_MODE_SCULPT); DRWShadingGroup *shgrp = NULL; struct GPUBatch *geom; ```
Clément Foucault was unassigned by Dalai Felinto 2019-12-23 16:33:39 +01:00

Added subscriber: @fclem

Added subscriber: @fclem
Jeroen Bakker self-assigned this 2020-01-10 13:31:02 +01:00

This issue was referenced by 162cb74320

This issue was referenced by 162cb74320303e91da28f103d0f1cd47442946af
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67305
No description provided.